backend: Implement basic RunVM command
* Exposed websocket endpoint accepting JSON commands
* Can Add VMs with name/mem_size
* Can Run VM by ID

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -7,7 +7,7 @@
   <title>Dinner Coordination Service</title>
 </head>
 <body>
-  <div id="app">Static content!</div>
+  <div id="app">Static content!!!!</div>
   <script src="bundle.js"></script>
 </body>
 </html>
